# disruptor-es

./: AGENTS.md  Cargo.toml  deny.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: prometheus-scrape-failures.md
.planning/phases/01-workspace-and-typed-kernel-contracts/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-SECURITY.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-durable-event-store-source-of-truth/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-SECURITY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-local-command-runtime-and-disruptor-execution/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-PATTERNS.md  03-RESEARCH.md  03-SOURCE-AUDIT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-commerce-fixture-domain/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW.md  04-SECURITY.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-cqrs-projection-and-query-catch-up/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW-FIX.md  05-REVIEW.md  05-SECURITY.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-outbox-and-process-manager-workflows/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW-FIX.md  06-REVIEW.md  06-SECURITY.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-adapters-observability-stress-and-template-guidance/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-06-PLAN.md  07-06-SUMMARY.md  07-07-PLAN.md  07-07-SUMMARY.md  07-PATTERNS.md  07-RESEARCH.md  07-REVIEW.md  07-SECURITY.md  07-SOURCE-AUDIT.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-runtime-duplicate-command-replay/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-PATTERNS.md  08-RESEARCH.md  08-REVIEW.md  08-SECURITY.md  08-SOURCE-AUDIT.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-tenant-scoped-runtime-aggregate-cache/: 09-01-PLAN.md  09-01-SUMMARY.md  09-PATTERNS.md  09-RESEARCH.md  09-REVIEW-FIX.md  09-REVIEW.md  09-SECURITY.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-duplicate-safe-process-manager-follow-up-keys/: 10-01-PLAN.md  10-01-SUMMARY.md  10-PATTERNS.md  10-RESEARCH.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/phases/11-evidence-recovery-and-runnable-http-service/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-CONTEXT.md  11-PATTERNS.md  11-RESEARCH.md  11-VALIDATION.md
.planning/phases/12-external-process-http-e2e-stress-and-benchmark-closure/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-CONTEXT.md  12-PATTERNS.md  12-RESEARCH.md  12-VALIDATION.md
.planning/phases/13-live-external-process-http-steady-state-stress-testing/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-RESEARCH.md  13-REVIEW.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: adapter_only.rs  domain_only.rs  external_process_http.rs  projector_outbox.rs  ring_only.rs  storage_only.rs
crates/adapter-grpc/: Cargo.toml
crates/adapter-http/: Cargo.toml
crates/adapter-http/src/: commerce.rs  error.rs  lib.rs
crates/adapter-http/tests/: commerce_api.rs  dependency_boundaries.rs
crates/app/: Cargo.toml
crates/app/migrations/: 20260417000000_event_store.sql  20260418000000_projection_read_models.sql  20260418010000_outbox.sql
crates/app/src/: commerce_process_manager.rs  http_stress.rs  lib.rs  main.rs  observability.rs  serve.rs  stress.rs
crates/app/tests/: external_process_http.rs  serve_smoke.rs
crates/app/tests/support/: http_process.rs  mod.rs
crates/es-core/: Cargo.toml
crates/es-core/src/: lib.rs
crates/es-kernel/: Cargo.toml
crates/es-outbox/: Cargo.toml
crates/es-outbox/src/: dispatcher.rs  error.rs  lib.rs  models.rs  process_manager.rs  publisher.rs
crates/es-outbox/tests/: contracts.rs  process_manager.rs
crates/es-projection/: Cargo.toml
crates/es-projection/src/: checkpoint.rs  error.rs  lib.rs  projector.rs  query.rs
crates/es-projection/tests/: minimum_position.rs
crates/es-runtime/: Cargo.toml
crates/es-runtime/src/: cache.rs  command.rs  disruptor_path.rs  engine.rs  error.rs  gateway.rs  lib.rs  router.rs  shard.rs  store.rs
crates/es-runtime/tests/: router_gateway.rs  runtime_flow.rs  shard_disruptor.rs  store.rs
crates/es-runtime/tests/common/: mod.rs
crates/es-store-postgres/: Cargo.toml
crates/es-store-postgres/src/: error.rs  event_store.rs  ids.rs  lib.rs  models.rs  outbox.rs  projection.rs  rehydrate.rs  sql.rs
crates/es-store-postgres/tests/: append_occ.rs  dedupe.rs  global_reads.rs  harness_smoke.rs  outbox.rs  phase7_integration.rs  projections.rs  snapshots.rs
crates/es-store-postgres/tests/common/: mod.rs
crates/example-commerce/: Cargo.toml
crates/example-commerce/src/: ids.rs  lib.rs  order.rs  product.rs  tests.rs  user.rs
crates/example-commerce/tests/: dependency_boundaries.rs
docs/: hot-path-rules.md  stress-results.md  template-guide.md
scripts/: compare-stress-layers.sh
(+44 files in other folders)
