[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.0", features = ["serde", "v7"] }
time = { version = "=0.3.44", features = ["serde", "formatting", "parsing"] }
proptest = "1.11.0"
insta = "1.47.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
