[package]
name = "adapter-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
es-core = { path = "../es-core" }
es-runtime = { path = "../es-runtime" }
example-commerce = { path = "../example-commerce" }
metrics.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
