[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
es-core = { path = "../es-core" }
es-outbox = { path = "../es-outbox" }
es-runtime = { path = "../es-runtime" }
example-commerce = { path = "../example-commerce" }
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
es-store-postgres = { path = "../es-store-postgres" }

[lints]
workspace = true
