[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
es-core = { path = "../es-core" }
es-outbox = { path = "../es-outbox" }
es-runtime = { path = "../es-runtime" }
example-commerce = { path = "../example-commerce" }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
es-store-postgres = { path = "../es-store-postgres" }

[lints]
workspace = true
