[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
adapter-http = { path = "../adapter-http" }
anyhow.workspace = true
axum.workspace = true
hdrhistogram.workspace = true
es-core = { path = "../es-core" }
es-kernel = { path = "../es-kernel" }
es-outbox = { path = "../es-outbox" }
es-projection = { path = "../es-projection" }
es-runtime = { path = "../es-runtime" }
es-store-postgres = { path = "../es-store-postgres" }
example-commerce = { path = "../example-commerce" }
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sysinfo.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
