[package]
name = "es-projection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
es-core = { path = "../es-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
time.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
