[package]
name = "es-store-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
es-core = { path = "../es-core" }
es-outbox = { version = "0.1.0", path = "../es-outbox" }
es-projection = { path = "../es-projection" }
example-commerce = { path = "../example-commerce" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true

[lints]
workspace = true
