[package]
name = "example-commerce"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
es-core = { path = "../es-core" }
es-kernel = { path = "../es-kernel" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
